melhor organizando cores das tabelas de status

--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -147,7 +147,7 @@
       }
 
       var config_radial_grupo{{alocado.id}} = {
-          type: 'radar',
+          type: "radar",
           data: {
               labels: [
                   {% for key, value in medias_oo.media_grupo.items %}
