--- a/organizacoes/templates/organizacoes/organizacoes_projetos.html
+++ b/organizacoes/templates/organizacoes/organizacoes_projetos.html
@@ -73,6 +73,7 @@
   <div class="atualizar">
 
     <div class="table-responsive">
+
       <table id="OrganizacoesTable" class="table-bordered table-sm">
         <thead class="table-info">
           <tr>
@@ -94,205 +95,170 @@
         </thead>
 
         <tbody>
-        {% for organizacao,projetos,contato in organizacoes_list %} 
-          <tr id="tr{{organizacao.id}}" class="item" 
-          {% if contato %}
-              style=
-              {% if contato.tipo_de_retorno < 2 and submetidas > 0 %}
-                "background-color:lightgreen" {% comment %} (2, 'Enviou proposta de projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 0 %}
-                "background-color:lightblue" {% comment %} (0, 'Contactada para enviar proposta'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 1 %}
-                "background-color:lemonchiffon" {% comment %} (1, 'Interessada em enviar proposta'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 2 %}
-                "background-color:lightgreen" {% comment %} (2, 'Enviou proposta de projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 3 %}
-                "background-color:pink" {% comment %} (3, 'Não vai enviar proposta de projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 4 %}
-                "background-color:yellow" {% comment %} (4, 'Confirmamos um grupo de estudantes para o projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 5 %}
-                "background-color:#e289df" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 6 %}
-                "background-color:aquamarine" {% comment %} (6, 'Contrato fechado para projeto'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 7 %}
-                "background-color:lightyellow" {% comment %} (7, 'Envio de Relatório Final'), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 12 %}
-                "background-color:#FFD580" {% comment %} (12, "Contrato em análise", "Contratação"), {% endcomment %}
-              {% elif contato.tipo_de_retorno == 13 %}
-                "background-color:#FFDAB9" {% comment %} (13, "Acionada para assinatura de contrato", "Contratação"), {% endcomment %}
-              {% else %}
-                "background-color:white"
-              {% endif %}
-              data-type="{% if contato.tipo_de_retorno < 2 %}2{% else %}{{contato.tipo_de_retorno}}{% endif %}"
-          {% endif %}
-          >
-          <td style="text-align: center; font-size: 12px;"></td>
-            <td>
-              {% if organizacao %}
-                <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">{{organizacao.nome}}</a>
-              {% else %}
-                <span style="color:gray;">Erro ao identificar organização</span>
-              {% endif %}
-            </td>
+          {% for organizacao,projetos,contato in organizacoes_list %} 
+            <tr id="tr{{organizacao.id}}" class="item" 
+            {% if contato %}
+                style="{% include 'cores_indicadores.html' %}"
+                data-type="{% if contato.tipo_de_retorno < 2 %}2{% else %}{{contato.tipo_de_retorno}}{% endif %}"
+            {% endif %}>
+            <td style="text-align: center; font-size: 12px;"></td>
+              <td>
+                {% if organizacao %}
+                  <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">{{organizacao.nome}}</a>
+                {% else %}
+                  <span style="color:gray;">Erro ao identificar organização</span>
+                {% endif %}
+              </td>
 
-            <td id="data{{organizacao.id}}">
-              {% if not contato %}
-                --------
-              {% else %}
-                {{contato.momento|date:"d/m/y"}}
-              {% endif %}
-            </td>
+              <td id="data{{organizacao.id}}">
+                {% if not contato %}
+                  --------
+                {% else %}
+                  {{contato.momento|date:"d/m/y"}}
+                {% endif %}
+              </td>
 
-            {% comment %} Anotação {% endcomment %}
-            <td>
-              {% if not contato %}
-                <div style="float:left;width: 92%;">
-                  <span id="contato_autor{{organizacao.id}}">
-                    ---:
-                  </span>
-                  <a
-                    id='organizacao{{organizacao.id}}'
-                    data-organizacao='{{organizacao.id}}'
-                    class="edit-annotation imprimir"
-                    >---------</a
-                  >
-                </div>
-                <div class="esconder" style="float:right;">
-                  {% if organizacao %}
-                    <a
-                      style="font-size: 0.5em; vertical-align: super;"
-                      data-organizacao='{{organizacao.id}}'
-                      class="create-annotation"
-                      href="{% url 'anotacao' organizacao.id %}"
-                      data-url="{% url 'anotacao' organizacao.id %}"
-                      >&#10133;</a
-                    >
-                  {% else %}
-                    <small>ERRO</small>
-                  {% endif %}
-                </div>
-              {% else %}
-                {% comment %} {{contato.texto}} {% endcomment %}
+              {% comment %} Anotação {% endcomment %}
+              <td>
+                {% if not contato %}
                   <div style="float:left;width: 92%;">
                     <span id="contato_autor{{organizacao.id}}">
-                      {{contato.autor.first_name}}:
+                      ---:
                     </span>
                     <a
                       id='organizacao{{organizacao.id}}'
                       data-organizacao='{{organizacao.id}}'
                       class="edit-annotation imprimir"
-                      href="{% url 'anotacao' organizacao.id %}"
-                      data-url="{% url 'anotacao' organizacao.id %}"
-                      data-anotacao="{{contato.id}}"
-                      >{{contato.texto}}</a
+                      >---------</a
                     >
                   </div>
                   <div class="esconder" style="float:right;">
-                    <a
-                      style="font-size: 0.5em; vertical-align: super;"
-                      data-organizacao='{{organizacao.id}}'
-                      class="create-annotation"
-                      href="{% url 'anotacao' organizacao.id %}"
-                      data-url="{% url 'anotacao' organizacao.id %}"
-                      >&#10133;</a
-                    >
+                    {% if organizacao %}
+                      <a
+                        style="font-size: 0.5em; vertical-align: super;"
+                        data-organizacao='{{organizacao.id}}'
+                        class="create-annotation"
+                        href="{% url 'anotacao' organizacao.id %}"
+                        data-url="{% url 'anotacao' organizacao.id %}"
+                        >&#10133;</a
+                      >
+                    {% else %}
+                      <small>ERRO</small>
+                    {% endif %}
                   </div>
-              {% endif %}
-            </td>
+                {% else %}
+                  {% comment %} {{contato.texto}} {% endcomment %}
+                    <div style="float:left;width: 92%;">
+                      <span id="contato_autor{{organizacao.id}}">
+                        {{contato.autor.first_name}}:
+                      </span>
+                      <a
+                        id='organizacao{{organizacao.id}}'
+                        data-organizacao='{{organizacao.id}}'
+                        class="edit-annotation imprimir"
+                        href="{% url 'anotacao' organizacao.id %}"
+                        data-url="{% url 'anotacao' organizacao.id %}"
+                        data-anotacao="{{contato.id}}"
+                        >{{contato.texto}}</a
+                      >
+                    </div>
+                    <div class="esconder" style="float:right;">
+                      <a
+                        style="font-size: 0.5em; vertical-align: super;"
+                        data-organizacao='{{organizacao.id}}'
+                        class="create-annotation"
+                        href="{% url 'anotacao' organizacao.id %}"
+                        data-url="{% url 'anotacao' organizacao.id %}"
+                        >&#10133;</a
+                      >
+                    </div>
+                {% endif %}
+              </td>
 
-            {% comment %} Projetos {% endcomment %}
-            <td class="text-center">
-              {{projetos|length}}
-            </td>
+              {% comment %} Projetos {% endcomment %}
+              <td class="text-center">
+                <span data-toggle="tooltip" data-html="true" animation="true" 
+                title="{% for projeto in projetos %}
+                          &bull;&nbsp;{{projeto.get_titulo}}<br>
+                          {{projeto.orientador}}<br>
+                          {% if not forloop.last %}<br>{% endif %}
+                        {% endfor %}">
+                  {{projetos|length}}
+                </span>
+              </td>
 
-          </tr>
-        {% empty %}
-          <tr>
-            <td colspan="7" class="text-center">Nenhuma organização cadastrada.</td>
-          </tr>
-        {% endfor %}
+            </tr>
+          {% empty %}
+            <tr>
+              <td colspan="7" class="text-center">Nenhuma organização cadastrada.</td>
+            </tr>
+          {% endfor %}
         </tbody>
       </table>
-      </div>
 
-      <div style="margin-top: 10px;">
-        <b>{% lng "Total de Organizações" "Total of Organizations" %}:</b> {{ organizacoes|length }}<br>
-        <b>{% lng "Total de Projetos" "Total of Projects" %}:</b> {{ projetos_periodo|length }}
-      <div>
+    </div>
 
-      <div class="flex-container">
-        <div class="flex-item">
-          <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
-            {% comment %}
-              <b>
-                <span lang="pt">Organizações contactadas recentemente</span>
-                <span lang="en" style="display: none;">Recently contacted organizations</span>
-                ({{total_organizacoes}}):
-              </b><br>
-            {% endcomment %}
-            {% include "tabela_indicadores.html" %}
-          </div>
-          <script>
+    <div style="margin-top: 10px;">
+      <b>{% lng "Total de Organizações" "Total of Organizations" %}:</b> {{ organizacoes|length }}<br>
+      <b>{% lng "Total de Projetos" "Total of Projects" %}:</b> {{ projetos_periodo|length }}
+    </div>
 
-            $(".show-hide").click(function() {
-              
-              click = $(this);
-              var filterValue = click.attr("data-type");
+    <div class="flex-container">
+      <div class="flex-item">
+        <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
+          {% comment %}
+            <b>
+              <span lang="pt">Organizações contactadas recentemente</span>
+              <span lang="en" style="display: none;">Recently contacted organizations</span>
+              ({{total_organizacoes}}):
+            </b><br>
+          {% endcomment %}
+          {% include "tabela_cores_indicadores.html" %}
+        </div>
+        <script>
 
-              var row = $(".item");
-              
-              row.each(function(i, el) {
-                if( (filterValue > 6) & ($(el).attr("data-type") > 6) ) {
+          $(".show-hide").click(function() {
+            
+            click = $(this);
+            var filterValue = click.attr("data-type");
+
+            var row = $(".item");
+            
+            row.each(function(i, el) {
+              if( (filterValue > 6) & ($(el).attr("data-type") > 6) ) {
+                if(click.attr("data-hide") === "false") {
+                  $(el).hide();
+                } else {
+                  $(el).show();
+                }
+              } else {
+                if( filterValue == $(el).attr("data-type") ) {
                   if(click.attr("data-hide") === "false") {
                     $(el).hide();
                   } else {
                     $(el).show();
                   }
-                } else {
-                  if( filterValue == $(el).attr("data-type") ) {
-                    if(click.attr("data-hide") === "false") {
-                      $(el).hide();
-                    } else {
-                      $(el).show();
-                    }
-                  }
                 }
-              });
-
-              if(click.attr("data-hide") === "false") {
-                click.attr("data-hide", "true");
-                click.css({background: "linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%)"});
-              } else {
-                click.attr("data-hide", "false");
-                click.css({background: click.attr("data-color") });
               }
-
             });
 
-          </script>
-        </div>
+            if(click.attr("data-hide") === "false") {
+              click.attr("data-hide", "true");
+              click.css({background: "linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%)"});
+            } else {
+              click.attr("data-hide", "false");
+              click.css({background: click.attr("data-color") });
+            }
 
+          });
+
+        </script>
       </div>
-
-    <script>
-      // Call numberRows after sorting the table
-      $("th").click(function() {numberRows();});
-    </script>
+    </div>
 
   </div>
 
-  {% include "annotation-modal.html" %} {% comment %} Esse é para organização prospectada só {% endcomment %}
-
-  {% include "edicoes_ajax.html" %}
-  {% comment %} {% include "edicoes_ajax.html" with tabela="Contratos" %} {% endcomment %}
   <script>
-
-    function numberRows() {
-      $("#OrganizacoesTable tbody tr").each(function(index) {
-        $(this).find('td:first').text(index + 1);
-      });
-    }    
-    numberRows();
 
     function filtra_data() {
       var filterValue = $("#filterAcompanhamento").val();
@@ -326,14 +292,25 @@
       });
     }
 
-    $("#filterAcompanhamento").change(function(){
-      filtra_data();
-    });  
-
+    $("#filterAcompanhamento").change(filtra_data);  
+    
+    function numberRows() {
+      $("#OrganizacoesTable tbody tr").each(function(index) {
+        $(this).find('td:first').text(index + 1);
+      });
+    }
+    
+    // Call numberRows after sorting the table
+    $("th").click(function() {numberRows();});
+    
     $(document).ready(function(){
+      numberRows();
       filtra_data();
     });
 
   </script>
+
+  {% include "annotation-modal.html" %}
+  {% include "edicoes_ajax.html" %}
 
 {% endblock %}
